fix dark mode on auth pages

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,8 @@
     --ring: 235 60% 56%;
     --radius: 0.3rem;
     --item-hover: 214.29 94.59% 92.75%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 172 57% 39%;
   }
 
   .dark {
@@ -48,12 +50,14 @@
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 84.24% 60.2%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
     --item-hover: 217.24 32.58% 17.45%;
+    --chart-1: 225 95% 52%;
+    --chart-2: 341 95% 52%;
   }
 }
 
